# RPMegaRacer

./: .gitignore  AI_Check_List.md  CMakeLists.txt  COLLISION_SYSTEM.md  CheckList.md  MakeTrack.md  README.md  debug_track.py
.agent/workflows/: build.md
src/: ai.c  ai.h  collision.c  collision.h  collision_masks_generated.c  constants.h  gamepad_mapper.c  hud.c  hud.h  input.c  input.h  layer2.c  layer2.h  main.c  main.hlp  opl.c  opl.h  player.c  player.h  racelogic.c  racelogic.h  sound.c  sound.h  track.c  track.h
tools/: convert_sprite.py  generate_collision_masks.py  pack_waypoints.py  process_track.py
tracks/track01/: waypoints.json
tracks/track02/: waypoints.json
tracks/track03/: waypoints.json
